@@ -757,7 +757,8 @@ footer, .footer {
 .multiselect-wrapper {
   position: relative;
   vertical-align: top;
-  display: inline-block; }
+  display: inline-block;
+  white-space: nowrap; }
 
 .multiselect {
   position: relative;
@@ -2229,10 +2230,10 @@ td.active-bg {
   color: #0e4123; }
 
 .info-bg, .info-bg input[type="radio"]:checked + label {
-  color: #00268e; }
+  color: #00268d; }
 
 .log-info-bg {
-  color: #00268e;
+  color: #00268d;
   background-color: #7499ff; }
 
 .average-bg, .average-bg input[type="radio"]:checked + label {
@@ -3487,3 +3488,5 @@ Widgets are used as containers to group any related information. Widget consists
 </div>
 ```
 */
+
+/*# sourceMappingURL=blue-theme.css.map */
